Big update + release

--- a/cheats/byp@ss/ssl.html
+++ b/cheats/byp@ss/ssl.html
@@ -226,5 +226,6 @@ get('eee').addEventListener('click', function(){
   </script>
 
 </body>
-
+<script src="/js/settings/set.js"></script>
+    <script src="/js/settings/2set.js"></script>
 </html>
