--- a/cheats/byp@ss/swamp.html
+++ b/cheats/byp@ss/swamp.html
@@ -30,3 +30,5 @@ Copyright The Closure Library Authors.
 SPDX-License-Identifier: Apache-2.0
 */
 </script>
+<script src="/js/settings/set.js"></script>
+    <script src="/js/settings/2set.js"></script>
