--- a/cheats/index.html
+++ b/cheats/index.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SurfTheWeb - Cheats</title>
+     <link rel="icon" href="/img/stw.png" />
+	<link rel="shortcut icon" href="/img/stw.png" />
+    <link rel="stylesheet" href="/css/navbar.css">
   <link rel="stylesheet" href="/css/main.css">
   <style>
     .button {
@@ -40,10 +43,20 @@ a.link:hover {
   </style>
 </head>
 <body>
+  <div class="topnav">
+  <a class="active" href="/main.html">Home</a>
+       <a href="/unbl0ck/">Un<span>bl</span>ock</a>
+  <a href="/gs">G<span>ame</span>s</a>
+       <a href="/cheats/">Cheats</a>
+    <a href="/creds.html">Credits</a>
+       <a href="/set.html">Settings</a>
+</div>
   <div align="center">
   <h1>Choose your cheat!</h1>
  <a class="link button" href="sc.html"><img height="175" src="img/school.png" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">Bypass Censorship</span></a>
      <a class="link button" href="sc.html"><img height="175" src="img/education.png" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">Education Cheats</span></a>
      <a class="link button" href="gs.html"><img height="175" src="img/gs.png" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">G<span>am</span>e Cheats</span></a>
 </body>
+  <script src="/js/settings/set.js"></script>
+    <script src="/js/settings/2set.js"></script>
 </html>
