--- a/gs/index.html
+++ b/gs/index.html
@@ -4,24 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SurfTheWeb - School Cheats</title>
+  <title>SurfTheWeb - Games</title>
      <link rel="icon" href="/img/stw.png" />
 	<link rel="shortcut icon" href="/img/stw.png" />
-  <link rel="stylesheet" href="/css/main.css">
-<link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/navbar.css">
 </head>
 <body>
-    <div class="topnav">
+<div class="topnav">
   <a class="active" href="/main.html">Home</a>
        <a href="/unbl0ck/">Un<span>bl</span>ock</a>
-  <a href="/gs">G<span>ame</span>s</a>
+  <a href="/">G<span>ame</span>s</a>
        <a href="/cheats/">Cheats</a>
     <a href="/creds.html">Credits</a>
        <a href="/set.html">Settings</a>
 </div>
   <div align="center">
-    <h1>School Cheats</h1>
-    <h2>Coming Soon!</h2>
+    <h1>Surf's Game List</h1>
 </body>
   <script src="/js/settings/set.js"></script>
     <script src="/js/settings/2set.js"></script>
