--- a/index.html
+++ b/index.html
@@ -5,18 +5,40 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="SurfTheWeb">
+  <meta property="og:description" content="Unblock, Cheat, Bypass - Go Surf!">
+  <meta name="theme-color" content="#46494C">
   <title>SurfTheWeb</title>
+     <link rel="icon" href="/img/stw.png" />
+	<link rel="shortcut icon" href="/img/stw.png" />
+  <style>
+    .btn {
+	font-family: 'Comfortaa', cursive;
+	margin: 5px;
+	border-radius: 10px;
+	width: 10px + fit-content;
+	height: 30px;
+	border-style: solid;
+	border-width: 2px;
+	background: none;
+	color: white;
+	transition: all  0.4s ease;
+}
+.btn:hover {
+	color: black;
+	cursor: pointer;
+	background: white;
+  </style>
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/start.css">
 </head>
-
 <body>
-  <script src="/js/main.js"></script>
   <div align="center">
     <h1>SurfTheWeb</h1>
     <h2>We're not just UNBLOCKING. We are doing it in style.</h2>
-    <button id="start-button" class="btn">Get Started.</button>
+    <button id="start-button">About:blank</button>
     <h3>Galactic Network © All Rights Reserved</h3>
+        <button class="btn" onclick="location.href='/main.html'">Normal</button>
     <script>
       var urlObj = new window.URL(window.location.href);
       var url = "https://v3.surfthewebofficial.ml/main.html";
@@ -128,5 +150,6 @@
     </svg>
 
 </body>
-
+<script src="/js/settings/set.js"></script>
+    <script src="/js/settings/2set.js"></script>
 </html>
