--- a/main.html
+++ b/main.html
@@ -6,14 +6,28 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>SurfTheWeb - Main</title>
+  <link rel="icon" href="/img/stw.png" />
+	<link rel="shortcut icon" href="/img/stw.png" />
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="js/main.js">
+  	<link rel="stylesheet" href="css/navbar.css">
 </head>
 <body>
+   <div class="topnav">
+  <a class="active" href="/main.html">Home</a>
+       <a href="unbl0ck/">Un<span>bl</span>ock</a>
+  <a href="gs">G<span>ame</span>s</a>
+       <a href="cheats/">Cheats</a>
+     <a href="creds.html">Credits</a>
+       <a href="set.html">Settings</a>
+</div>
 	<div align="center">
 		<h1>SurfTheWeb.</h1>
     <h2>Welcome By<span>pass</span>er!</h2>
 		<h2>Galactic Network © All Rights Reserved</h2>
+    <!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=8279699&style=0010&nbdigits=9&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>    
+    <h3><a class="active" href="https://dsc.gg/gnetwork">Discord</a></h3>
     <svg width="100%" height="100%" id="svg" viewBox="0 0 1440 590" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150"><style>
           .path-0{
             animation:pathAnim-0 4s;
@@ -59,7 +73,7 @@
               d: path("M 0,600 C 0,600 0,400 0,400 C 90.25837320574166,412.4019138755981 180.51674641148333,424.80382775119614 286,420 C 391.4832535885167,415.19617224880386 512.1913875598085,393.1866028708134 609,382 C 705.8086124401915,370.8133971291866 778.7177033492824,370.44976076555025 872,375 C 965.2822966507176,379.55023923444975 1078.9377990430623,389.0143540669856 1177,394 C 1275.0622009569377,398.9856459330144 1357.531100478469,399.4928229665072 1440,400 C 1440,400 1440,600 1440,600 Z");
             }
           }</style><defs><linearGradient id="gradient" x1="0%" y1="50%" x2="100%" y2="50%"><stop offset="5%" stop-color="#abb8c3"></stop><stop offset="95%" stop-color="#abb8c3"></stop></linearGradient></defs><path d="M 0,600 C 0,600 0,400 0,400 C 90.25837320574166,412.4019138755981 180.51674641148333,424.80382775119614 286,420 C 391.4832535885167,415.19617224880386 512.1913875598085,393.1866028708134 609,382 C 705.8086124401915,370.8133971291866 778.7177033492824,370.44976076555025 872,375 C 965.2822966507176,379.55023923444975 1078.9377990430623,389.0143540669856 1177,394 C 1275.0622009569377,398.9856459330144 1357.531100478469,399.4928229665072 1440,400 C 1440,400 1440,600 1440,600 Z" stroke="none" stroke-width="0" fill="url(#gradient)" fill-opacity="1" class="transition-all duration-300 ease-in-out delay-150 path-1"></path></svg>
-	</div>
 </body>
-
+<script src="/js/settings/set.js"></script>
+    <script src="/js/settings/2set.js"></script>
 </html>
