--- a/unbl0ck/vm/index.html
+++ b/unbl0ck/vm/index.html
@@ -4,9 +4,63 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SurfTheWeh - Choose Virtual Machine</title>
+  <title>SurfTheWeb - Choose Virtual Machine</title>
+     <link rel="icon" href="/img/stw.png" />
+	<link rel="shortcut icon" href="/img/stw.png" />
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/navbar.css">
+  <style>
+    .button {
+        background-color: black;
+        border: none;
+        color: white;
+        padding: 1px 1px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 2px 2px;
+        cursor: pointer;
+        border-radius: 12px;
+        transition: background-color 0.3s,
+        color 0.2s, transform .4s;
+        
+}
+a.link:hover {
+  background-color: white;
+       transform: scale(1.1);
+        color: black;
+        border: none;
+        padding: 1px 1px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 2px 2px;
+        cursor: pointer;
+        border-radius: 12px;
+}
+  </style>
 </head>
 <body>
-  
+  <div class="topnav">
+  <a class="active" href="/main.html">Home</a>
+       <a href="/unbl0ck/">Un<span>bl</span>ock</a>
+  <a href="/gs">G<span>ame</span>s</a>
+       <a href="/cheats/">Cheats</a>
+    <a href="/creds.html">Credits</a>
+       <a href="/set.html">Settings</a>
+</div>
+  <div align="center">
+    <h1>Choose Your Virtual Machine!</h1>
+    <a class="link button" href="never.html"><img height="175" src="https://neverinstall.com/logo.png" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">Never Install</span></a>
+    <a class="link button" href="apponfly.html"><img height="175"src="https://pbs.twimg.com/profile_images/571351367877275648/dypTRQ7b_400x400.png" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">AppOnFly</span></a>
+    <a class="link button" href="chrome.html"><img height="175" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Google_Chrome_icon_%28February_2022%29.svg/640px-Google_Chrome_icon_%28February_2022%29.svg.png" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">Chromium</span></a>
+    <a class="link button" href="win11.html"><img height="175" src="https://www.citypng.com/public/uploads/preview/hd-windows-11-logo-icon-transparent-background-11663458838jo5iexhr4e.png" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">Windows 11</span></a>
+    <a class="link button" href="pixel.html"><img height="175" src="https://bpb-us-w2.wpmucdn.com/blog.smu.edu/dist/0/141/files/2017/10/serveimage.png" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">Google Pixel</span></a>
+    <a class="link button" href="android.html"><img height="175" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/64/Android_logo_2019_%28stacked%29.svg/2346px-Android_logo_2019_%28stacked%29.svg.png" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">Android</span></a>
+    <a class="link button" href="cloudvm.html"><img height="175" src="https://vm.lunadox.repl.co/cloudVM.png" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">Cloud VM</span></a>
 </body>
+  <script src="/js/settings/set.js"></script>
+    <script src="/js/settings/2set.js"></script>
 </html>
