--- a/cheats/byp@ss/index.html
+++ b/cheats/byp@ss/index.html
@@ -5,8 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SurfTheWeb - Bypass</title>
+     <link rel="icon" href="/img/stw.png" />
+	<link rel="shortcut icon" href="/img/stw.png" />
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/navbar.css">
 </head>
 <body>
+  <div class="topnav">
+  <a class="active" href="/main.html">Home</a>
+       <a href="/unbl0ck/">Un<span>bl</span>ock</a>
+  <a href="/gs">G<span>ame</span>s</a>
+       <a href="/cheats/">Cheats</a>
+    <a href="/creds.html">Credits</a>
+       <a href="/set.html">Settings</a>
+</div>
   <h1>School Bypa<span>ss</span>es</h1>
+  <h2>Coming Soon!</h2>
 </body>
+  <script src="/js/settings/set.js"></script>
+    <script src="/js/settings/2set.js"></script>
 </html>
