--- a/unbl0ck/nb.html
+++ b/unbl0ck/nb.html
@@ -5,8 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SurfTheWeb - Unblock</title>
+     <link rel="icon" href="/img/stw.png" />
+	<link rel="shortcut icon" href="/img/stw.png" />
 </head>
 <body>
   <iframe src="https://books4ever.xyz" style="position:fixed;top:0;bottom:0;left:0;right:0;width:100%;height:100%;border:none;margin:0;padding:0;z-index:999999;">Your browser does not support iframes</iframe>
 </body>
+  <script src="/js/settings/set.js"></script>
+    <script src="/js/settings/2set.js"></script>
 </html>
