--- a/unbl0ck/pxs.html
+++ b/unbl0ck/pxs.html
@@ -5,7 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SurfTheWeb - Choose Proxy</title>
+     <link rel="icon" href="/img/stw.png" />
+	<link rel="shortcut icon" href="/img/stw.png" />
   	<link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/navbar.css">
   <style>
     .pxsimg {
 	width: 150px;
@@ -19,8 +22,16 @@
   </style>
 </head>
 <body>
+  <div class="topnav">
+  <a class="active" href="/main.html">Home</a>
+       <a href="/unbl0ck/">Un<span>bl</span>ock</a>
+  <a href="/gs">G<span>ame</span>s</a>
+       <a href="/cheats/">Cheats</a>
+    <a href="/creds.html">Credits</a>
+       <a href="/set.html">Settings</a>
+</div>
   <div align="center">
-    <h1>Choose your pr<span>ox</span>y</h1>
+    <h1>Choose your pr<span>ox</span>y!</h1>
     <a href="nb.html">
 			<img src="img/nb.png" class="pxsimg">
 		</a>
@@ -37,4 +48,6 @@
 			<img src="img/lucid.png" class="pxsimg">
 		</a>
 </body>
+  <script src="/js/settings/set.js"></script>
+    <script src="/js/settings/2set.js"></script>
 </html>
