--- a/unbl0ck/vm/index.html
+++ b/unbl0ck/vm/index.html
@@ -60,6 +60,7 @@ a.link:hover {
     <a class="link button" href="pixel.html"><img height="175" src="https://bpb-us-w2.wpmucdn.com/blog.smu.edu/dist/0/141/files/2017/10/serveimage.png" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">Google Pixel</span></a>
     <a class="link button" href="android.html"><img height="175" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/64/Android_logo_2019_%28stacked%29.svg/2346px-Android_logo_2019_%28stacked%29.svg.png" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">Android</span></a>
     <a class="link button" href="cloudvm.html"><img height="175" src="https://vm.lunadox.repl.co/cloudVM.png" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">Cloud VM</span></a>
+     <a class="link button" href="fx.html"><img height="175" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Firefox_logo%2C_2019.svg/1200px-Firefox_logo%2C_2019.svg.png" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">FireFox</span></a>
 </body>
   <script src="/js/settings/set.js"></script>
     <script src="/js/settings/2set.js"></script>
