added some games

--- a/gs/index.html
+++ b/gs/index.html
@@ -1,3 +1,8 @@
+
+|
+
+||||
+|
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +14,38 @@
 	<link rel="shortcut icon" href="/img/stw.png" />
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/navbar.css">
+ <style>
+    .button {
+        background-color: black;
+        border: none;
+        color: white;
+        padding: 1px 1px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 2px 2px;
+        cursor: pointer;
+        border-radius: 12px;
+        transition: background-color 0.3s,
+        color 0.2s, transform .4s;
+        
+}
+a.link:hover {
+  background-color: white;
+       transform: scale(1.1);
+        color: black;
+        border: none;
+        padding: 1px 1px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 2px 2px;
+        cursor: pointer;
+        border-radius: 12px;
+}
+  </style>
 </head>
 <body>
 <div class="topnav">
@@ -21,6 +58,8 @@
 </div>
   <div align="center">
     <h1>Surf's Game List</h1>
+    <a class="link button" href="gfiles/0v0"><img height="175" src="https://3ch0.netlify.app/projects/ovo/ovo.png" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">0v0</span></a>
+    <a class="link button" href="gfiles/1v1"><img height="175" src="https://3ch0.netlify.app/projects/1v1lol/splash.png" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">1v1.lol</span></a>
 </body>
   <script src="/js/settings/set.js"></script>
     <script src="/js/settings/2set.js"></script>
