--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content="SurfTheWeb">
-  <meta property="og:description" content="Unblock, Cheat, Bypass - Go Surf!">
+   <meta name="Unblocking the web in style!">
+  
+<meta content="SurfTheWeb - The unblock king" property="og:title">
+
+<meta content="SurfTheWeb is a site to play and unblock at the same time!
+  
+  The #1 Choice for unblocking the web." property="og:description">
+
+<meta content="https://v3.surfthewebofficial.ml/img/banner.png" property="og:image">
+
+<link type="application/json+oembed" href="https://v3.surfthewebofficial.ml/oembed.json">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="theme-color" content="#46494C">
   <title>SurfTheWeb</title>
      <link rel="icon" href="/img/stw.png" />
