--- a/gs/index.html
+++ b/gs/index.html
@@ -1,8 +1,3 @@
-
-|
-
-||||
-|
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -58,8 +53,14 @@ a.link:hover {
 </div>
   <div align="center">
     <h1>Surf's Game List</h1>
-    <a class="link button" href="gfiles/0v0"><img height="175" src="https://3ch0.netlify.app/projects/ovo/ovo.png" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">0v0</span></a>
-    <a class="link button" href="gfiles/1v1"><img height="175" src="https://3ch0.netlify.app/projects/1v1lol/splash.png" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">1v1.lol</span></a>
+    <a class="link button" href="gfiles/0v0"><img height="175" src="img/ovo.jpeg" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">0v0</span></a>
+    <a class="link button" href="gfiles/1v1"><img height="175" src="img/1v1.jpeg" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">1v1.lol</span></a>
+    <a class="link button" href="gfiles/1v1"><img height="175" src="img/tunnel.jpeg" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">Tunnel Rush</span></a>
+    <a class="link button" href="gfiles/1v1"><img height="175" src="img/bs.jpeg" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">Basketball Stars</span></a>
+    <a class="link button" href="gfiles/jfl"><img height="175" src="img/jfl.jpeg" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">Justfall.lol</span></a>
+    <a class="link button" href="gfiles/hwheels"><img height="175" src="img/hw.jpeg" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">Happy Wheels</span></a>
+    <a class="link button" href="gfiles/mx3mw"><img height="175" src="img/mx3mw.jpeg" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">Moto X3m Winter</span></a>
+    <a class="link button" href="gfiles/rooftopsnipers"><img height="175" src="img/rs.jpeg" width="175"><span style="padding:3px;margin:auto;display:block;width:170px;height:25px;line-height:25px;overflow:hidden;text-align:center;white-space:nowrap">Rooftop Snipers</span></a>
 </body>
   <script src="/js/settings/set.js"></script>
     <script src="/js/settings/2set.js"></script>
