--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <h2>We're not just UNBLOCKING. We are doing it in style.</h2>
     <button id="start-button">About:blank</button>
     <h3>Galactic Network © All Rights Reserved</h3>
-        <button class="btn" onclick="location.href='/main.html'">Normal</button>
+        <button class="btn" onclick="location.href='main.html'">Normal</button>
     <script>
       var urlObj = new window.URL(window.location.href);
       var url = "https://v3.surfthewebofficial.ml/main.html";
